[package]
name = "grep-rust-simple"
version = "0.1.0"
repository = "https://github.com/arjav0703/grep-rust"
license = "MIT"
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
thiserror = "1.0.38"                             # error handling
